examples/network-performance/netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: loadtest
spec:
  containers:
    - name: network-tools
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: results
          mountPath: /mnt/data
  volumes:
  - name: results
    persistentVolumeClaim:
      claimName: pvc-1g
