examples/network-performance/deploy-aws_east.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loadtest
---
apiVersion: v1
kind: Service
metadata:
  name: fortio-server
  namespace: loadtest
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: grpc
    port: 8079
    targetPort: 8079
  selector:
    app: fortio-server
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: iperf3-server
  namespace: loadtest
spec:
  ports:
  - name: iperf3
    port: 5201
    targetPort: 5201
  selector:
    app: iperf3-server
  type: LoadBalancer
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: echo-app
  namespace: loadtest
spec:
  host: echo-app
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        failoverPriority:
        - provider=aws-us-east-1
      simple: LEAST_REQUEST
    outlierDetection:
      baseEjectionTime: 20s
      consecutive5xxErrors: 5
      interval: 5s
      maxEjectionPercent: 50
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    provider: aws-us-east-1
  name: fortio-server
  namespace: loadtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-server
  template:
    metadata:
      labels:
        app: fortio-server
    spec:
      containers:
      - args:
        - server
        - -http-port
        - '8080'
        - -grpc-port
        - '8079'
        image: fortio/fortio:latest
        name: fortio
        ports:
        - containerPort: 8080
        - containerPort: 8079
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    provider: aws-us-east-1
  name: iperf3-server
  namespace: loadtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iperf3-server
  template:
    metadata:
      labels:
        app: iperf3-server
    spec:
      containers:
      - args:
        - -s
        image: networkstatic/iperf3:latest
        name: iperf3
        ports:
        - containerPort: 5201
