examples/network-performance/deploy-aws_west.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loadtest
---
apiVersion: v1
kind: Service
metadata:
  name: fortio-server
  namespace: loadtest
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: grpc
    port: 8079
    targetPort: 8079
  selector:
    app: fortio-server
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: iperf3-server
  namespace: loadtest
spec:
  ports:
  - name: iperf3
    port: 5201
    targetPort: 5201
  selector:
    app: iperf3-server
  type: LoadBalancer
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: echo-app
  namespace: loadtest
spec:
  host: echo-app
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        failoverPriority:
        - provider=aws-us-east-1
      simple: LEAST_REQUEST
    outlierDetection:
      baseEjectionTime: 20s
      consecutive5xxErrors: 5
      interval: 5s
      maxEjectionPercent: 50
